tests/error handling/syntax_errors/test3.lang
main() {
Int x = 5;
String y = "hello world";
skip  
}
